--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
+    "react-masonry-css": "^1.0.14",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
